# Dual-Engine

./: .gitignore  .opencode.json  .opencode.json.example  CONFIG.md  Cargo.toml  DEMO.md  INTEGRATION.md  LICENSE  OpenCode.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  USAGE.md  demo.sh  install.bat  install.sh  rustfmt.toml  优化.md
.github/workflows/: ci.yml
benches/: README.md  shared_types_bench.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/engine-claude/: Cargo.toml
crates/engine-claude/src/: lib.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: lib.rs  mock_engine.rs
crates/engine-opencode/: Cargo.toml
crates/engine-opencode/src/: lib.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: audit.rs  error.rs  lib.rs  rate_limiter.rs  validator.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  FAQ.md  INSTALL_RUST.md  OPTIMIZATION_SUMMARY.md  PROJECT_STATUS.md  README.md
examples/: README.md  basic_chat.rs  code_generation.rs  engine_switch.rs  factorial.rs  main.rs
scripts/: setup.bat  setup.sh
scripts/completions/: README.md
src/: fibonacci.rs
src/claude-code/: README.md
src/claude-code/spec/: 00_overview.md  01_core_entry_query.md  02_commands.md  03_tools.md  04_components_core_messages.md  05_components_agents_permissions_design.md  06_services_context_state.md  07_hooks.md  08_ink_terminal.md  09_bridge_cli_remote.md  10_utils.md  11_special_systems.md  12_constants_types.md  13_rust_codebase.md  INDEX.md
src/claude-code/src-rust/: Cargo.toml  TS_RUST_GAP_ANALYSIS.md
src/claude-code/src-rust/crates/api/: Cargo.toml
src/claude-code/src-rust/crates/api/src/: lib.rs
src/claude-code/src-rust/crates/bridge/: Cargo.toml
src/claude-code/src-rust/crates/bridge/src/: lib.rs
src/claude-code/src-rust/crates/buddy/: Cargo.toml
src/claude-code/src-rust/crates/buddy/src/: lib.rs
src/claude-code/src-rust/crates/cli/: Cargo.toml
src/claude-code/src-rust/crates/cli/src/: main.rs  oauth_flow.rs  system_prompt.txt
src/claude-code/src-rust/crates/commands/: Cargo.toml
src/claude-code/src-rust/crates/commands/src/: lib.rs  named_commands.rs
src/claude-code/src-rust/crates/core/: Cargo.toml
src/claude-code/src-rust/crates/core/src/: analytics.rs  attachments.rs  bash_classifier.rs  claudemd.rs  cloud_session.rs  effort.rs  feature_gates.rs  git_utils.rs  keybindings.rs  lib.rs  lsp.rs  memdir.rs  message_utils.rs  migrations.rs  oauth_config.rs  output_styles.rs  prompt_history.rs  remote_session.rs  remote_settings.rs  session_storage.rs  settings_sync.rs  system_prompt.rs  team_memory_sync.rs  tips.rs  token_budget.rs  voice.rs
src/claude-code/src-rust/crates/core/tests/: parity_smoke.rs
src/claude-code/src-rust/crates/mcp/: Cargo.toml
src/claude-code/src-rust/crates/mcp/src/: connection_manager.rs  lib.rs  oauth.rs  registry.rs
src/claude-code/src-rust/crates/plugins/: Cargo.toml
src/claude-code/src-rust/crates/plugins/src/: lib.rs  loader.rs  manifest.rs  marketplace.rs  plugin.rs  registry.rs
src/claude-code/src-rust/crates/query/: Cargo.toml
src/claude-code/src-rust/crates/query/src/: agent_tool.rs  away_summary.rs  command_queue.rs  compact.rs  context_analyzer.rs  coordinator.rs  cron_scheduler.rs  lib.rs  session_memory.rs  skill_prefetch.rs
src/claude-code/src-rust/crates/tools/: Cargo.toml
src/claude-code/src-rust/crates/tools/src/: agent_tool.rs  ask_user.rs  bash.rs  bundled_skills.rs  computer_use.rs  config_tool.rs  cron.rs  enter_plan_mode.rs  exit_plan_mode.rs  file_edit.rs  file_read.rs  file_write.rs  glob_tool.rs  grep_tool.rs  lib.rs  lsp_tool.rs  mcp_auth_tool.rs  notebook_edit.rs  remote_trigger.rs  skill_tool.rs  tasks.rs  team_tool.rs  todo_write.rs  tool_search.rs  web_fetch.rs  web_search.rs
src/claude-code/src-rust/crates/tui/: Cargo.toml
src/claude-code/src-rust/crates/tui/src/: agents_view.rs  app.rs  clawd.rs  desktop_upsell_startup.rs  dialogs.rs  diff_viewer.rs  feedback_survey.rs  hooks_config_menu.rs  lib.rs  mcp_view.rs  memory_file_selector.rs  memory_update_notification.rs  model_picker.rs  overage_upsell.rs  overlays.rs  plugin_views.rs  privacy_screen.rs  prompt_input.rs  render.rs  settings_screen.rs  stats_dialog.rs  theme_screen.rs  virtual_list.rs
src/claude-code/src-rust/crates/tui/src/messages/: markdown.rs  mod.rs
src/claude-code/src-rust/crates/tui/tests/: diff_viewer.rs  render_snapshots.rs
src/opencode/: config  index  packed-refs
src/opencode/internal/config/: config.go
src/opencode/internal/llm/models/: dashscope.go  local.go  models.go  moonshot.go
src/opencode/internal/llm/provider/: provider.go
src/opencode/objects/pack/: pack-c667eb87ea1c5611efd06d08564f71002e5c4d5b.idx  pack-c667eb87ea1c5611efd06d08564f71002e5c4d5b.pack  pack-c667eb87ea1c5611efd06d08564f71002e5c4d5b.rev
src/opencode/refs/heads/: main
tests/: cli_integration_tests.rs  engine_core_tests.rs  engine_integration_tests.rs
