[workspace]
resolver = "2"
members = [
    "crates/engine-core",
    "crates/engine-opencode",
    "crates/engine-claude",
    "crates/shared-types",
    "crates/cli",
    "crates/tui",
]

default-members = ["crates/cli", "crates/tui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dual Engine Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

reqwest = { version = "0.12", features = ["json", "stream", "native-tls", "multipart"], default-features = false }
reqwest-eventsource = "0.6"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

clap = { version = "4", features = ["derive", "env", "string"] }

ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

anyhow = "1"
thiserror = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
walkdir = "2"
tempfile = "3"
dirs = "5"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
indexmap = { version = "2", features = ["serde"] }
bytes = "1"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

similar = "2"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html"] }
unicode-width = "0.2"
unicode-segmentation = "1"

nix = { version = "0.29", features = ["process", "signal", "user"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
schemars = { version = "0.8", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1