[package]
name = "engine-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared-types = { path = "../shared-types" }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
hashbrown = "0.15"

[dev-dependencies]
tokio = { workspace = true }