[package]
name = "cc-buddy"
version.workspace = true
edition.workspace = true

[dependencies]
cc-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
