[package]
name = "cc-commands"
version.workspace = true
edition.workspace = true

[dependencies]
cc-core = { workspace = true }
cc-api = { workspace = true }
cc-tools = { workspace = true }
cc-query = { workspace = true }
cc-tui = { workspace = true }
cc-plugins = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
arboard = { version = "3", default-features = false }
urlencoding = { workspace = true }
open = { workspace = true }
