[package]
name = "cc-query"
version.workspace = true
edition.workspace = true

[dependencies]
cc-core = { workspace = true }
cc-api = { workspace = true }
cc-plugins = { workspace = true }
cc-tools = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
parking_lot = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
